--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
         <section>
 
             <h1>
-                <font>Slarmoo's Box</font>
+                <font>HiiveBox</font>
                 <span id="goldboxPlant" style="display: inline; color:#62a13b"></span>
                 <!-- <span id="goldboxPlant" style="display: inline; color: var(--plant-color, var(--link-accent, #62a13b));"></span> -->
             </h1>
             
             <p id="introduction">
-                Slarmoo's Box is a mod of Ultrabox that aims to advance Beepbox's capabilities. <br>
+                this is a certified hometown incident <br>
                 UltraBox is a mod first envisioned by Neptendo and made possible by contributing community members (see <a href="./credits.html">credits</a>).<br>
                 It takes elements from most of the beepbox mods available and puts them in one convenient package.
             </p>
