--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             margin-top: 0.5em;
             margin-bottom: 0.5em;
             -webkit-text-stroke-width: 0;
-            color: var(--mod-title, #247d1d);
+            color: var(--mod-title, #ff0062);
         }
 
         h2 {
@@ -174,7 +174,7 @@
 
             <h1>
                 <font>HiiveBox</font>
-                <span id="goldboxPlant" style="display: inline; color:#ff0062"></span>
+                <span id="goldboxPlant" style="display: inline; color:#b0ff38"></span>
                 <!-- <span id="goldboxPlant" style="display: inline; color: var(--plant-color, var(--link-accent, #62a13b));"></span> -->
             </h1>
             
