--- a/index.html
+++ b/index.html
@@ -174,12 +174,16 @@
 
             <h1>
                 <font>HiiveBox</font>
-                <span id="goldboxPlant" style="display: inline; color:#b0ff38"></span>
+                <spandd id="goldboxPlant" style="display: inline; color:#b0ff38"></span>
                 <!-- <span id="goldboxPlant" style="display: inline; color: var(--plant-color, var(--link-accent, #62a13b));"></span> -->
             </h1>
-            
+
+            <p>
+		    this is the help text
+	    </p>
+		
             <p id="introduction">
-                this is the help text<br>
+                Slarmoo's Box is a mod of Ultrabox that aims to advance Beepbox's capabilities.<br>
                 UltraBox is a mod first envisioned by Neptendo and made possible by contributing community members (see <a href="./credits.html">credits</a>).<br>
                 It takes elements from most of the beepbox mods available and puts them in one convenient package.
             </p>
@@ -410,7 +414,7 @@
         // Slarmoo's Box plants
         "✨","🌈","🌧️","🪨","🐍","🌲","🌳","𓆏","🦀","🍄‍🟫","🌵","and Bobby","🥚",
         //Current version
-        "1.4.7"
+        "1.0.0"
         ];
         const date = new Date();
         if (Math.floor(Math.random() * 3) == 0) { //more than doubled chance for a plant to show up
